Week3 corrected
