# src/routes/usersRouter.js
@@ -1,0 +1,10 @@
+const express = require("express");
+const router = express.Router();
+const userController = require("../controllers/userController");
+
+router.get("/users", userController.getAllUsers);
+router.get("/users/:id", userController.getUserById);
+router.post("/users", userController.createUser);
+router.put("/users/:id", userController.updateUser);
+router.delete("/users/:id", userController.deleteUser);
+router.get("/users/:id/items", userController.getUserItems);
